'首页+登录+注册'

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -52,7 +52,7 @@
             </div>
             <div class="floor f_pink">
                 <h2>
-                    <span class="tit">相册套系</span>
+                    <span class="tit">单本相册</span>
                     <a href="" class="more">全部 ></a>
                 </h2>
                 <div class="d1">
@@ -71,7 +71,7 @@
             </div>
             <div class="floor f_origin">
                 <h2>
-                    <span class="tit">相册套系</span>
+                    <span class="tit">相框</span>
                     <a href="" class="more">全部 ></a>
                 </h2>
                 <div class="d1">
@@ -90,7 +90,7 @@
             </div>
             <div class="floor f_origin">
                 <h2>
-                    <span class="tit">相册套系</span>
+                    <span class="tit">摆台</span>
                     <a href="" class="more">全部 ></a>
                 </h2>
                 <div class="d1">
