--- a/WebContent/pages/com/header.html
+++ b/WebContent/pages/com/header.html
@@ -4,7 +4,7 @@
     </div>
     <div class="nav">
         <a href="/index.html" name="index">首页</a>
-        <a href="">在线下单</a>
+        <a href="/pages/order/order.html" name="order">在线下单</a>
         <a href="">账户中心</a>
         <a href="">充值</a>
         <a href="" class="shopCart">购物车</a>
