--- a/WebContent/pages/order/order.html
+++ b/WebContent/pages/order/order.html
@@ -238,6 +238,7 @@
         </div>
     </form>
 </div>
+<div id="footer" style="margin-top: 0;"></div>
 <div class="tan orderTan" style="display:none;">
     <div class="swiper-container">
         <div class="tit">产品展示</div>
@@ -310,8 +311,7 @@
         $(".add").click(function () {
                 numObj.val(++num)
         })
-        // $("#footer").load('/pages/com/footer.html');
-
+        $("#footer").load('/pages/com/footer.html');
     });
 
 </script>
