--- a/WebContent/pages/com/header.html
+++ b/WebContent/pages/com/header.html
@@ -7,15 +7,15 @@
         <a href="/pages/order/order.html" name="order">在线下单</a>
         <a href="">账户中心</a>
         <a href="">充值</a>
-        <a href="" class="shopCart">购物车</a>
+        <a href="/pages/shopCart/shopCart.html" class="shopCart" name="shopCart">购物车</a>
         <a href="" class="customer">客服</a>
         <a href="/login.html" class="login">登陆</a>
         <div class="exit">
-            <img src="/images/user.png" alt="user">
+            <img src="/images/user.png" alt="user" class="userImg">
             <div class="exitTan" style="display: none;">
                 <ul class="ul1">
                     <li class="userName">
-                        <a href="">
+                        <a href="/pages/user/user.html">
                             <span class="s1">王可可</span>
                             <span class="orange">[一星会员]</span>
                         </a>
