--- a/WebContent/pages/order/order.html
+++ b/WebContent/pages/order/order.html
@@ -121,11 +121,11 @@
                 <div class="tit">颜色</div>
                 <div class="nr">
                     <label>
-                        <input type="radio" name="color" value="1">
+                        <input type="radio" name="color2" value="1">
                         <span>白色</span>
                     </label>
                     <label>
-                        <input type="radio" name="color" value="1">
+                        <input type="radio" name="color2" value="1">
                         <span>灰色</span>
                     </label>
                 </div>
@@ -134,11 +134,11 @@
                 <div class="tit">颜色</div>
                 <div class="nr">
                     <label>
-                        <input type="radio" name="color" value="1">
+                        <input type="radio" name="color3" value="1">
                         <span>白色</span>
                     </label>
                     <label>
-                        <input type="radio" name="color" value="1">
+                        <input type="radio" name="color3" value="1">
                         <span>灰色</span>
                     </label>
                 </div>
