--- a/WebContent/pages/com/userMenu.html
+++ b/WebContent/pages/com/userMenu.html
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
 
-</body>
-</html>
+<a href="/pages/user/user.html" name="user">我的账户</a>
+<a href="/pages/user/joinMember.html" name="joinMember">加入会员</a>
+<a href="/pages/user/myOrder.html" name="myOrder">我的订单</a>
