'在线下单-查看产品图'

--- a/WebContent/pages/order/order.html
+++ b/WebContent/pages/order/order.html
@@ -89,153 +89,203 @@
                 </div>
             </div>
         </div>
-        <!-- 选择 -->
-        <ul class="o_m_main">
-            <li>
-                <div class="tit">名称</div>
-                <div class="nr hasImg">
-                    <label>
-                        <input type="radio" name="name" value="1">
-                        <span>安琪儿套系 <span class="checkI">[图]</span></span>
-                    </label>
-                    <label>
-                        <input type="radio" name="name" value="1">
-                        <span>雅典娜套系 <i>三星以上</i> <span class="checkI">[图]</span></span>
-                    </label>
+        <div class="o_m_mainD">
+            <!-- 选择 -->
+            <ul class="o_m_main">
+                <li>
+                    <div class="tit">名称</div>
+                    <div class="nr hasImg">
+                        <label>
+                            <input type="radio" name="name" value="1">
+                            <span>安琪儿套系 <span class="checkI">[图]</span></span>
+                        </label>
+                        <label>
+                            <input type="radio" name="name" value="1">
+                            <span>雅典娜套系 <i>三星以上</i> <span class="checkI">[图]</span></span>
+                        </label>
+                    </div>
+                </li>
+                <li>
+                    <div class="tit">颜色</div>
+                    <div class="nr">
+                        <label>
+                            <input type="radio" name="color" value="1">
+                            <span>白色</span>
+                        </label>
+                        <label>
+                            <input type="radio" name="color" value="1">
+                            <span>灰色</span>
+                        </label>
+                    </div>
+                </li>
+                <li>
+                    <div class="tit">颜色</div>
+                    <div class="nr">
+                        <label>
+                            <input type="radio" name="color2" value="1">
+                            <span>白色</span>
+                        </label>
+                        <label>
+                            <input type="radio" name="color2" value="1">
+                            <span>灰色</span>
+                        </label>
+                    </div>
+                </li>
+                <li>
+                    <div class="tit">颜色</div>
+                    <div class="nr">
+                        <label>
+                            <input type="radio" name="color3" value="1">
+                            <span>白色</span>
+                        </label>
+                        <label>
+                            <input type="radio" name="color3" value="1">
+                            <span>灰色</span>
+                        </label>
+                    </div>
+                </li>
+            </ul>
+            <!-- 购买 -->
+            <div class="o_m_order">
+                <!-- 说明 -->
+                <div class="dis">制作说明：雅典娜套系由20寸实木相框*1+12寸PU相册*1+7寸摆台*2组成，20寸相框照片尺寸28*40cm(四周留0.5cm出血），12寸PU相册内页共10P照片尺寸42.5*29.5cm（四周留 0.3cm出血），7寸摆台照片尺寸10.5*15.5cm(四周留0.3cm出血）。</div>
+                <div class="d2">
+                    <!-- 备注 -->
+                    <div class="remark">
+                        <div>备注</div>
+                        <textarea name="" id="" cols="30" rows="8" placeholder="请填写您所要备注的信息（限500字  非必填项）"></textarea>
+                        <div class="proId">产品ID：12345</div>
+                    </div>
+                    <!-- 提交订单 -->
+                    <ul class="info">
+                        <li>
+                            <span class="s1">单价:</span>
+                            <span class="s2">58.00</span>
+                        </li>
+                        <li>
+                            <span class="s1">会员价:</span>
+                            <span class="s2"><b class="red">48.00</b></span>
+                        </li>
+                        <li>
+                            <span class="s1">数量:</span>
+                            <span class="s2">
+                            <img src="/images/subtract.png" class="subtract" alt="减">
+                            <input type="text" value="1" id="num">
+                            <img src="/images/add.png" class="add" alt="加">
+                        </span>
+                        </li>
+                        <li>
+                            <span class="s1"><b>总金额:</b></span>
+                            <span class="s2">
+                            <span class="red">￥<span class="font30">58.00</span></span>
+                        </span>
+                        </li>
+                        <li>
+                            <button class="btnAn">提交订单</button>
+                        </li>
+                    </ul>
                 </div>
-            </li>
-            <li>
-                <div class="tit">颜色</div>
-                <div class="nr">
-                    <label>
-                        <input type="radio" name="color" value="1">
-                        <span>白色</span>
-                    </label>
-                    <label>
-                        <input type="radio" name="color" value="1">
-                        <span>灰色</span>
-                    </label>
-                </div>
-            </li>
-            <li>
-                <div class="tit">颜色</div>
-                <div class="nr">
-                    <label>
-                        <input type="radio" name="color2" value="1">
-                        <span>白色</span>
-                    </label>
-                    <label>
-                        <input type="radio" name="color2" value="1">
-                        <span>灰色</span>
-                    </label>
-                </div>
-            </li>
-            <li>
-                <div class="tit">颜色</div>
-                <div class="nr">
-                    <label>
-                        <input type="radio" name="color3" value="1">
-                        <span>白色</span>
-                    </label>
-                    <label>
-                        <input type="radio" name="color3" value="1">
-                        <span>灰色</span>
-                    </label>
-                </div>
-            </li>
-        </ul>
+            </div>
+        </div>
         <!--  图片展示 -->
         <ul class="o_m_main2" style="display:none;">
             <li>
                 <div class="d1">
                     <img src="/images/order/pro.jpg" alt="产品名称">
-                    <div>简爱套系</div>
+                    <div>
+                        <div class="p1">
+                            <div class="s1">简爱套系</div>
+                            <div class="s2">会员:<span class="red">￥20</span> 起</div>
+                        </div>
+                        <div class="p2 red">10寸相框+10*10银盐册</div>
+                    </div>
                 </div>
             </li>
             <li>
                 <div class="d1">
                     <img src="/images/order/pro.jpg" alt="产品名称">
-                    <div>简爱套系</div>
+                    <div>
+                        <div class="p1">
+                            <div class="s1">简爱套系</div>
+                            <div class="s2">会员:<span class="red">￥20</span> 起</div>
+                        </div>
+                        <div class="p2 red">10寸相框+10*10银盐册</div>
+                    </div>
                 </div>
             </li>
             <li>
                 <div class="d1">
                     <img src="/images/order/pro.jpg" alt="产品名称">
-                    <div>简爱套系</div>
+                    <div>
+                        <div class="p1">
+                            <div class="s1">简爱套系</div>
+                            <div class="s2">会员:<span class="red">￥20</span> 起</div>
+                        </div>
+                        <div class="p2 red">10寸相框+10*10银盐册</div>
+                    </div>
                 </div>
             </li>
             <li>
                 <div class="d1">
                     <img src="/images/order/pro.jpg" alt="产品名称">
-                    <div>简爱套系</div>
+                    <div>
+                        <div class="p1">
+                            <div class="s1">简爱套系</div>
+                            <div class="s2">会员:<span class="red">￥20</span> 起</div>
+                        </div>
+                        <div class="p2 red">10寸相框+10*10银盐册</div>
+                    </div>
                 </div>
             </li>
             <li>
                 <div class="d1">
                     <img src="/images/order/pro.jpg" alt="产品名称">
-                    <div>简爱套系</div>
+                    <div>
+                        <div class="p1">
+                            <div class="s1">简爱套系</div>
+                            <div class="s2">会员:<span class="red">￥20</span> 起</div>
+                        </div>
+                        <div class="p2 red">10寸相框+10*10银盐册</div>
+                    </div>
                 </div>
             </li>
             <li>
                 <div class="d1">
                     <img src="/images/order/pro.jpg" alt="产品名称">
-                    <div>简爱套系</div>
+                    <div>
+                        <div class="p1">
+                            <div class="s1">简爱套系</div>
+                            <div class="s2">会员:<span class="red">￥20</span> 起</div>
+                        </div>
+                        <div class="p2 red">10寸相框+10*10银盐册</div>
+                    </div>
                 </div>
             </li>
             <li>
                 <div class="d1">
                     <img src="/images/order/pro.jpg" alt="产品名称">
-                    <div>简爱套系</div>
+                    <div>
+                        <div class="p1">
+                            <div class="s1">简爱套系</div>
+                            <div class="s2">会员:<span class="red">￥20</span> 起</div>
+                        </div>
+                        <div class="p2 red">10寸相框+10*10银盐册</div>
+                    </div>
                 </div>
             </li>
             <li>
                 <div class="d1">
                     <img src="/images/order/pro.jpg" alt="产品名称">
-                    <div>简爱套系</div>
+                    <div>
+                        <div class="p1">
+                            <div class="s1">简爱套系</div>
+                            <div class="s2">会员:<span class="red">￥20</span> 起</div>
+                        </div>
+                        <div class="p2 red">10寸相框+10*10银盐册</div>
+                    </div>
                 </div>
             </li>
         </ul>
-        <!-- 购买 -->
-        <div class="o_m_order">
-            <!-- 说明 -->
-            <div class="dis">制作说明：雅典娜套系由20寸实木相框*1+12寸PU相册*1+7寸摆台*2组成，20寸相框照片尺寸28*40cm(四周留0.5cm出血），12寸PU相册内页共10P照片尺寸42.5*29.5cm（四周留 0.3cm出血），7寸摆台照片尺寸10.5*15.5cm(四周留0.3cm出血）。</div>
-            <div class="d2">
-                <!-- 备注 -->
-                <div class="remark">
-                    <div>备注</div>
-                    <textarea name="" id="" cols="30" rows="8" placeholder="请填写您所要备注的信息（限500字  非必填项）"></textarea>
-                    <div class="proId">产品ID：12345</div>
-                </div>
-                <!-- 提交订单 -->
-                <ul class="info">
-                    <li>
-                        <span class="s1">单价:</span>
-                        <span class="s2">58.00</span>
-                    </li>
-                    <li>
-                        <span class="s1">会员价:</span>
-                        <span class="s2"><b class="red">48.00</b></span>
-                    </li>
-                    <li>
-                        <span class="s1">数量:</span>
-                        <span class="s2">
-                            <img src="/images/subtract.png" class="subtract" alt="减">
-                            <input type="text" value="1" id="num">
-                            <img src="/images/add.png" class="add" alt="加">
-                        </span>
-                    </li>
-                    <li>
-                        <span class="s1"><b>总金额:</b></span>
-                        <span class="s2">
-                            <span class="red">￥<span class="font30">58.00</span></span>
-                        </span>
-                    </li>
-                    <li>
-                        <button class="btnAn">提交订单</button>
-                    </li>
-                </ul>
-            </div>
-        </div>
     </form>
 </div>
 <div id="footer" style="margin-top: 0;"></div>
@@ -277,7 +327,7 @@
         // 切换查看方法
         $(".position .more").click(function () {
             var _this = $(this);
-            $(".o_m_main").slideToggle(0,function () {
+            $(".o_m_mainD").slideToggle(0,function () {
                 if($(this).is(":visible")){_this.html('查看产品图');}
             });
             $(".o_m_main2").slideToggle(0,function () {
