--- a/WebContent/pages/order/order.html
+++ b/WebContent/pages/order/order.html
@@ -11,6 +11,17 @@
     <link rel="stylesheet" href="/js/swiper/swiper.min.css">
     <link rel="stylesheet" href="/css/com.css">
     <link rel="stylesheet" href="/css/index.css">
+    <style>
+        body{
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+        }
+        #main{
+            flex:1;
+            background: #FFF;
+        }
+    </style>
 </head>
 <body>
 <!-- 头部 -->
@@ -155,6 +166,7 @@
                         <div>备注</div>
                         <textarea name="" id="" cols="30" rows="8" placeholder="请填写您所要备注的信息（限500字  非必填项）"></textarea>
                         <div class="proId">产品ID：12345</div>
+                        <div class="num">500</div>
                     </div>
                     <!-- 提交订单 -->
                     <ul class="info">
