--- a/WebContent/login.html
+++ b/WebContent/login.html
@@ -9,7 +9,7 @@
     <script src="/js/jquery-3.4.0.min.js"></script>
     <!-- Link Swiper's CSS -->
     <link rel="stylesheet" href="/css/com.css">
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/css/index.css?1">
 </head>
 <body>
 <!-- 头部 -->
@@ -73,6 +73,14 @@
                     <label>
                         <input type="checkbox" name="myType" value="3" class="checkbox">
                         <span>写真</span>
+                    </label>
+                    <label>
+                        <input type="checkbox" name="myType" value="4" class="checkbox">
+                        <span>旅拍</span>
+                    </label>
+                    <label>
+                        <input type="checkbox" name="myType" value="4" class="checkbox">
+                        <span>旅拍</span>
                     </label>
                     <label>
                         <input type="checkbox" name="myType" value="4" class="checkbox">
